Updated index.html with image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <h1>Pragnesh</h1>
   <p>Senior Java Developer | Backend | Distributed Systems</p>
-
+  <img src="https://www.shutterstock.com/shutterstock/photos/2524030091/display_1500/stock-photo-a-scenic-aerial-view-of-arenal-volcano-in-costa-rica-with-lush-green-vegetation-and-clear-blue-sky-2524030091.jpg" alt="Mountain">
   <h2>Projects</h2>
   <ul>
     <li><a href="https://github.com/username/project1">Project One</a> – Spring Boot, Kafka</li>
